# sinowealth-kb-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  shell.nix
.github/ISSUE_TEMPLATE/: bug-report.md  device-report.md
.github/workflows/: push.yml
src/: device_selector.rs  device_spec.rs  hid.rs  hid_tree.rs  ihex.rs  isp.rs  isp_device.rs  main.rs  part.rs  platform_spec.rs  programmer.rs  util.rs
tests/: convert_test.rs  list_test.rs  read_test.rs  write_test.rs
tests/common/: mod.rs
tests/fixtures/: nuphy-air60_smk.hex  nuphy-air60_smk_jtag.hex
tools/: functional-test.sh
